- forms module included in the code

--- a/jotwebface1000/src/app/browser-session/browser-session.component.html
+++ b/jotwebface1000/src/app/browser-session/browser-session.component.html
@@ -65,7 +65,7 @@
           <br>
           <br>
           <br>
-          This is sample page for browser-sessions
+          This is sample page for browser-sessions.....
           
           
 <!------------------------------------------- Center Content finished ------------------------------------------>
