--- a/jotwebface1000/src/app/login/login.component.html
+++ b/jotwebface1000/src/app/login/login.component.html
@@ -16,5 +16,5 @@
 
 
 <div id="loader" class="loader">
-    <div class="inner"></div>
+    <i class="fa fa-refresh fa-spin" style="font-size:75px;position:absolute;left:50%;top:40%;z-index:0;color:chartreuse;"></i>
 </div>	
