--- a/jotwebface1000/src/app/application-user/application-user.component.html
+++ b/jotwebface1000/src/app/application-user/application-user.component.html
@@ -14,7 +14,7 @@
         </div>
         
         <div class="clsdivloggedbutton">
-          <a (click)="proceedlogout();"  style="font-size:20px;color:burlywood;text-decoration: none;cursor: pointer;">Logout <i class="fa fa-sign-out"></i></a>
+          <a (click)="proceedlogout();" style="text-decoration: underline;cursor: pointer;color:skyblue">Logout  <i class="fa fa-sign-out"></i></a>
         </div>
       
       </div>
@@ -60,7 +60,7 @@
       </div>
       <div class="clsdivcentercontent" id="iddivcentercontent">
 <!----------------------------------------- Center Content started ------------------------------------------->
-<i class="fa fa-refresh" style="font-size:40px;color:#ffc107;float:right;" (click)="Refresh();"></i>
+<i class="fa fa-refresh" style="font-size:25px;color:#90c0f3;float:left;margin-left: 10px;margin-top: 10px;" (click)="Refresh();"></i>
        
 <div class="clsdivworkarea">
   <input type="button" (click)="openPopup1();" value="Add User"/>
@@ -83,7 +83,7 @@
         <td>{{ u.jobtitle }}</td>
         <td>{{ u.username}}</td>
         <td>{{ u.rolename }}</td>
-        <td><input type="radio" name="radiogroup" value="{{u.id}}" (change)="handleChange($event)"/></td>
+        <td><input type="radio" name="radiogroup" style="width: 20px;height: 20px;"  value="{{u.id}}" (click)="handleChange($event)"/></td>
       </tr>
     </tbody>
   </table>
@@ -115,7 +115,7 @@
               <label for="referencenumber"><b>Reference Number</b></label>
               </td>
               <td>
-              <input type="text" placeholder="Enter ReferenceNumber" name=userrefno id="userrefno" value={{userrefno}}/>
+              <input type="text" placeholder="Enter ReferenceNumber" name=userrefno id="userrefno" value={{userrefno}} disabled/>
               </td>
               </tr>
               
