--- a/jotwebface1000/src/app/browser-session/browser-session.component.html
+++ b/jotwebface1000/src/app/browser-session/browser-session.component.html
@@ -14,7 +14,7 @@
         </div>
         
         <div class="clsdivloggedbutton">
-          <a (click)="proceedlogout();"  style="font-size:20px;color:burlywood;text-decoration: none;cursor: pointer;">Logout <i class="fa fa-sign-out"></i></a>
+          <a (click)="proceedlogout();" style="text-decoration: underline;cursor: pointer;color:skyblue">Logout  <i class="fa fa-sign-out"></i></a>
         </div>
       
       </div>
