--- a/jotwebface1000/src/app/createbusiness/createbusiness.component.html
+++ b/jotwebface1000/src/app/createbusiness/createbusiness.component.html
@@ -14,7 +14,7 @@
       </div>
       
       <div class="clsdivloggedbutton">
-        <a (click)="proceedlogout();"  style="font-size:20px;color:burlywood;text-decoration: none;cursor: pointer;">Logout <i class="fa fa-sign-out"></i></a>
+        <a (click)="proceedlogout();" style="text-decoration: underline;cursor: pointer;color:skyblue">Logout  <i class="fa fa-sign-out"></i></a>
       </div>
     
     </div>
@@ -60,9 +60,10 @@
     </div>
     <div class="clsdivcentercontent" id="iddivcentercontent">
 <!----------------------------------------- Center Content started ------------------------------------------->
-<i class="fa fa-refresh" style="font-size:40px;color:#ffc107;float:right;" (click)="Refresh();"></i>        
+<i class="fa fa-refresh" style="font-size:25px;color:#90c0f3;float:left;margin-left: 10px;margin-top: 10px;" (click)="Refresh();"></i>
         
-<div class="container">
+<div class="container" style="margin-top:50px;">
+
   <form [formGroup]="registerform" (ngSubmit)="handleSubmit()">
       
     <label for="ownername">Business owner name</label><br>
