Integration related css file changes

--- a/jotwebface1000/src/app/application-user/application-user.component.html
+++ b/jotwebface1000/src/app/application-user/application-user.component.html
@@ -9,7 +9,7 @@
       
         <div class="clsdivloggedinfo">
         Welcome <label class="clslbldispalyname">{{displayname}}</label>
-                <label class="clslbldispalyrole">{{rolename}}</label>
+                <label class="clslbldispalyrole">( {{rolename}} )</label>
                 <label class="clslbldisplaymoduleindex"  id="idlblmoduleindex">{{moduleindex}}</label>
         </div>
         
@@ -115,7 +115,7 @@
               <label for="referencenumber"><b>Reference Number</b></label>
               </td>
               <td>
-              <input type="text" placeholder="Enter ReferenceNumber" name=userrefno id="userrefno" value={{userrefno}} disabled/>
+              <input type="text" placeholder="Enter ReferenceNumber" name=userrefno id="userrefno" value={{userrefno}} style="background-color: grey;" disabled/>
               </td>
               </tr>
               
