--- a/jotwebface1000/src/app/modifybusiness/modifybusiness.component.html
+++ b/jotwebface1000/src/app/modifybusiness/modifybusiness.component.html
@@ -10,7 +10,7 @@
     
       <div class="clsdivloggedinfo">
       Welcome <label class="clslbldispalyname">{{displayname}}</label>
-              <label class="clslbldispalyrole">{{rolename}}</label>
+              <label class="clslbldispalyrole">( {{rolename}} )</label>
               <label class="clslbldisplaymoduleindex"  id="idlblmoduleindex">{{moduleindex}}</label>
       </div>
       
