--- a/jotwebface1000/src/app/removebusiness/removebusiness.component.html
+++ b/jotwebface1000/src/app/removebusiness/removebusiness.component.html
@@ -9,7 +9,7 @@
     
       <div class="clsdivloggedinfo">
       Welcome <label class="clslbldispalyname">{{displayname}}</label>
-              <label class="clslbldispalyrole">{{rolename}}</label>
+              <label class="clslbldispalyrole">( {{rolename}} )</label>
               <label class="clslbldisplaymoduleindex"  id="idlblmoduleindex">{{moduleindex}}</label>
       </div>
       
